--- a/README
+++ b/README
@@ -7,12 +7,12 @@ Files:
 https://github.com/diydrones/apm_planner
 
 Credits:
-http://qgroundcontrol.org/credits
+http://planner2.ardupilot.com/credits-and-contributors/
 
 
 Documentation
 =============
-For generating documentation, refer to README in the doc directory.
+see http://planner2.ardupilot.com
 
 
 Mac OS X
@@ -28,7 +28,7 @@ Install SDL
 
 Install QT
 -----------
-1) Download Qt 4.8+
+1) Download Qt 4.8.x (Does not current work with Qt5.x)
 
 2) Double click the package installer
 
